--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
         </ul>
       </nav>
       <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-        <h4 id="about">About</h4>
-        <p>Creative problem solver and detail-oriented Computer Science and Engineering graduate eager to start my career as a Software Engineer. Result driven and capable leader, having led a professional organization, organized national convention trips, multiple class projects, and training management. Proficient in a range of modern technologies including C/C++, Java, PHP, and SQL.</p>
+          <br><br><br>
+        <h4 id="about">About Me</h4>
+        <div class="container-fluid p-5 bg-primary text-white text-center">
+            <h1>Hey, I'm Shakira!</h1>
+            <p>Creative problem solver and detail-oriented Computer Science and Engineering graduate eager to start my career as a Software Engineer. Result driven and capable leader, having led a professional organization, organized national convention trips, multiple class projects, and training management. Proficient in a range of modern technologies including C/C++, Java, PHP, and SQL.</p>
+        </div>
+
         <br><br><br>
         <h4 id="skills">Skills</h4>
             <div style="position: center">
@@ -57,7 +62,7 @@
             </div>
 
 
-        
+        <br><br><br>
         <h4 id="projects">Recent Projects</h4>
         <div class="container">
             <!-- Content here -->
